# namekoplus

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
namekoplus/: __init__.py  command.py
namekoplus/chassis-agent/metric-configs/: grafana.json.mako  statsd_config.js
namekoplus/chassis-agent/metric-configs/grafana_conf/provisioning/datasources/: all.yaml
namekoplus/chassis-agent/metric-configs/prometheus_conf/: prometheus.yml
namekoplus/templates/all/: config.yml
namekoplus/templates/demo/: config.yml
namekoplus/templates/event/: config.yml  events_demo.py
namekoplus/templates/http/: http_demo.py
namekoplus/templates/rpc/: rpc_demo.py
namekoplus/templates/timer/: timer_demo.py
namekoplus/tests/unit/: test_service.py
src/namekoplus/: __init__.py  command.py
src/namekoplus/chassis/: chassis.py
src/namekoplus/chassis-agent/metric-configs/: statsd_mapping.yml.mako
src/namekoplus/chassis-agent/rabbitmq/: docker-compose-rabbitmq.yml
src/namekoplus/templates/all/: all_demo.py
src/namekoplus/templates/demo/: rpc_demo.py
src/namekoplus/templates/event/: config.yml
src/namekoplus/templates/http/: config.yml
