
[project]
name = "namekoplus"
version = "0.5.3"
description = "A lightweight Python distributed microservice solution"
keywords = ["lightweight python distributed microservice solution"]
readme = "README.md"
authors = [
    {name = "Bryant He", email = "bryantsisu@qq.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8, <4"
dependencies = [
    "click==8.1.5",
    "mako==1.2.4",
    "nameko==3.0.0rc11",
    "pytest==7.4.0",
    "python-on-whales==0.65.0",
    "shortuuid==1.0.11",
]
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/Bryanthelol/namekoplus"
"Source Code" = "https://github.com/Bryanthelol/namekoplus"
"Bug Tracker" = "https://github.com/Bryanthelol/namekoplus/issues"

[project.optional-dependencies]
ha = [
    "cachetools==5.3.0",
    "circuitbreaker==2.0.0",
    "tenacity==8.2.2",
]
ob = [
    "nameko-sentry==1.0.0",
    "nameko-tracer==1.4.0",
]
log = [
    "logstash_formatter==0.5.17",
    "loguru==0.7.2",
]
metric = [
    "statsd==4.0.1",
]
schema = [
    "marshmallow==3.20.1",
]
security = [
    "cryptography",
]
dev = [
    "environs==9.5.0",
    "python-dotenv==1.0.0",
]

[project.scripts]
namekoplus = "namekoplus.command:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
